feat: setting close mainApp Restart

--- a/app/settings/config.ini
+++ b/app/settings/config.ini
@@ -1,5 +1,5 @@
 [SSLSettings]
-enable = False
+enable = True
 opensslpath = /usr/bin/openssl
 certpath = /path/path/cert.crt
 keypath = /path/path/key.key
