fix:settings screen file text field check isFile

--- a/app/settings/config.ini
+++ b/app/settings/config.ini
@@ -1,6 +1,6 @@
 [SSLSettings]
 enable = True
 opensslpath = /usr/bin/openssl
-certpath = /path/path/cert.crt
-keypath = /path/path/key.key
+certpath = /Users/unkonow/Desktop/space folder ok?/server.crt
+keypath = /Users/unkonow/Desktop/space folder ok?/secret.key
 
